--- a/conda.yaml
+++ b/conda.yaml
@@ -14,3 +14,4 @@ dependencies:
      - robocorp==2.1.0          # https://pypi.org/project/robocorp
      - robocorp-browser==2.3.3     # https://pypi.org/project/robocorp-browser
      - loguru==0.7.2
+     - robocorp-storage==1.0.4
